# LP2-Trabalho-Final-TCP

./: CMakeLists.txt  README.md  RELATORIO.md  test_multiple_clients.sh
include/: chatroom.hpp  clienthandler.hpp  colors.hpp  logger.hpp  server.hpp
src/: chatroom.cpp  client_main.cpp  clienthandler.cpp  logger.cpp  main.cpp  server.cpp  server_main.cpp  test_logger.cpp
